# focus_flow_cloud

./: -  .env  .env.example  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.production  README.md  check_output.txt  cliff.toml  diesel.toml  docker-compose.yml  index.html  justfile  lcov.info  release.jks  sitemap.xml  websocket_messages_examples.json
backend/crates/adapters/: Cargo.toml
backend/crates/adapters/src/: app.rs  config.rs  helpers.rs  http_error.rs  lib.rs  mod.rs  openapi.rs  routes.rs
backend/crates/adapters/src/auth/: password_policy_impl.rs
backend/crates/adapters/src/flashcards/http/: mod.rs
backend/crates/adapters/src/flashcards/persistence/: fsrs_adapter.rs  mod.rs
backend/crates/adapters/src/http/: app_state.rs  mod.rs
backend/crates/adapters/src/http/auth/: auth_middleware.rs  login.rs  logout.rs  mod.rs  oauth_token.rs  refresh.rs  routes.rs
backend/crates/adapters/src/http/category/: create_category.rs  delete_categories.rs  get_all_categories.rs  get_categories_and_tasks.rs  get_category.rs  mod.rs  routes.rs  update_category.rs
backend/crates/adapters/src/http/push_subscription/: handler.rs  routes.rs
backend/crates/adapters/src/http/reminder/: get_pending.rs  mod.rs  routes.rs
backend/crates/adapters/src/http/routes/: mod.rs
backend/crates/adapters/src/http/session/: create_manual_session.rs  get_sessions.rs  routes.rs  update_session.rs
backend/crates/adapters/src/http/stats/: calculate_stats_by_period.rs  get_stats.rs  mod.rs  routes.rs
backend/crates/adapters/src/http/task/: add_reminder.rs  (+18 more)
backend/crates/adapters/src/mappers/: focus_session_mapper.rs  task_mapper.rs
backend/crates/adapters/src/middleware/: auth_middleware.rs  request_id_middleware.rs
backend/crates/adapters/src/persistence/: mod.rs  schema.rs
backend/crates/adapters/src/shared/: mod.rs
backend/crates/adapters/src/user/: mod.rs
backend/crates/adapters/src/workers/: reminder_worker.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: helpers.rs  lib.rs
backend/crates/domain/src/entities/: category.rs  focus_session.rs  mod.rs  push_subscription.rs  reminder.rs  stats.rs  task.rs  user.rs  user_setting.rs
backend/crates/domain/src/error/: mod.rs  persistence_error.rs  stats_error.rs
backend/crates/domain/src/services/: mod.rs  password_policy_service.rs  token_service.rs
backend/crates/domain/src/traits/: focus_session_persistence.rs  password_policy.rs
backend/crates/domain/src/user/: mod.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: app.rs  config.rs  lib.rs  openapi.rs
crates/adapters/src/http/: app_state.rs  pomodoro_state.rs
crates/adapters/src/http/auth/: auth_middleware.rs  login.rs  mod.rs  refresh.rs  routes.rs
crates/adapters/src/http/category/: get_category.rs  routes.rs  update_category.rs
crates/adapters/src/http/dto/: mod.rs
crates/adapters/src/http/routes/: mod.rs
crates/adapters/src/http/session/: create_manual_session.rs  get_sessions.rs  update_session.rs
crates/adapters/src/http/stats/: calculate_stats_by_period.rs
crates/adapters/src/http/task/: delete_tasks.rs  get_tasks.rs  routes.rs  update_task.rs  update_task_api.rs
crates/adapters/src/http/user_setting/: mod.rs  routes.rs  update_setting.rs
crates/adapters/src/http/users/: create_user.rs  get_info.rs  mod.rs  routes.rs  update_password.rs
crates/adapters/src/http/ws/: handle_break_event.rs  handle_start_event.rs  handle_terminate_event.rs  handle_update_concentration_score.rs  mod.rs  note_update.rs  routes.rs  sync_pomodoro_state.rs  update_pomodoro_context.rs  ws_handler.rs  ws_message.rs
crates/adapters/src/middleware/: auth_middleware.rs  request_id_middleware.rs
crates/adapters/src/persistence/db_models/: db_category.rs  db_user.rs
crates/adapters/src/persistence/persistence_impl/: category_persistence_impl.rs  focus_session_persistence_impl.rs  persistence.rs  task_persistence_impl.rs  user_persistence_impl.rs  user_setting_persistence_impl.rs
crates/application/: Cargo.toml
crates/application/src/: app_error.rs  config.rs  helpers.rs  mocks.rs
crates/application/src/traits/: category_persistence.rs  focus_session_persistence.rs  task_persistence.rs  user_setting_persistence.rs
crates/application/src/use_cases/: mod.rs
crates/application/src/use_cases/category/: create_category_usecase.rs  delete_categories_usecase.rs  delete_category_usecase.rs  get_category_and_task_usecase.rs  get_category_usecase.rs  update_category_usecase.rs
crates/application/src/use_cases/focus_session/: create_manual_session.rs  create_session.rs  find_sessions_by_filters.rs  update_focus_session.rs
crates/application/src/use_cases/persistance_command/: create_category_data.rs  create_focus_session_data.rs  create_manual_session_data.rs  create_task_data.rs  find_session_by_filters_data.rs  update_category_data.rs
crates/application/src/use_cases/stats/: calculate_stats_by_period.rs  mod.rs
crates/application/src/use_cases/task/: create_task.rs  delete_tasks.rs  get_tasks.rs  orphan_tasks.rs  update_task.rs
crates/application/src/use_cases/user/: delete_user.rs  login_user.rs  mod.rs  refresh_token.rs  register_user.rs  update_password.rs  update_user_username.rs  validate_user_credentials.rs
crates/application/src/use_cases/user_settings/: get_settings.rs  update_setting.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  lib.rs  setup.rs
crates/infrastructure/src/adapters/: schema.rs
crates/infrastructure/src/adapters/persistence/: category_persistence_impl.rs  focus_session_persistence_impl.rs  mod.rs  task_persistence_impl.rs  user_persistence_impl.rs  user_setting_persistence_impl.rs
crates/infrastructure/src/crypto/: password_hasher.rs
crates/infrastructure/src/database/: migrations.rs  mod.rs  persistence.rs
crates/infrastructure/src/policy/: password_policy_impl.rs
crates/infrastructure/src/services/: jwt_service.rs
shared/: Cargo.toml
shared/src/: auth.rs  category.rs  focus_session.rs  lib.rs  stats.rs  task.rs  user_setting.rs
(+1681 files in other folders)
