[package]
name = "focus_flow_cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.16"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
axum = "0.8.4"
diesel = { version = "2", features = ["postgres", "uuid", "chrono", "r2d2"] }
diesel_migrations = "2"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.28"
tracing = "0.1.41"
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.11.3"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
