[package]
name = "focus_flow_cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
lazy_static = "1.5.0"
regex = "1.11.3"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
axum = { version="0.8.6", features=["ws"]}
tokio-tungstenite = "0.28.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
diesel = { version = "2", features = ["postgres", "uuid", "chrono", "r2d2"] }
diesel_migrations = "2"
async-trait = "0.1.89"
http = "1.3.1"
tower-http = { version = "0.6.6", features = ["trace"] }
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
