[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
serde = { version = "1", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.utoipa]
version = "5"
features = ["uuid", "chrono"]
optional = true
