[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
rand.workspace = true
futures-util.workspace = true

[dev-dependencies]
mockall = "0.11"
tokio = { workspace = true, features = ["macros", "full"] }
