[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
axum = { workspace = true, features=["ws"]}
tokio = { workspace = true, features = ["full"] }
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum.workspace = true
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipa-scalar.workspace = true
tower-http = { workspace = true, features = ["trace", "cors", "fs"] }
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
matchit.workspace = true
tower = { workspace = true, features = ["util"] }
tower-sessions.workspace = true
time = "0.3"
deadpool-diesel.workspace = true
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "r2d2"] }
diesel_migrations.workspace = true
async-trait.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
serde_json.workspace = true
thiserror.workspace = true
validator = { workspace = true, features = ["derive"] }
http.workspace = true
futures-util.workspace = true
lazy_static.workspace = true
regex.workspace = true
dotenvy.workspace = true
serde_urlencoded = "0.7.1"
secrecy.workspace = true
apalis = { version = "1.0.0-rc.9" }
apalis-postgres = { version = "1.0.0-rc.8", features = ["migrate"] }
apalis-sql = { version = "1.0.0-rc.9", default-features = false }
apalis-core = { version = "1.0.0-rc.9", features = ["sleep"] }
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio"] }
web-push = "0.10"
base64 = "0.13"
futures = { version = "0.3", features = ["executor"] }

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["postgres"] }
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
