[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
async-trait = { workspace = true }
rand.workspace = true

[dev-dependencies]
mockall = "0.11"
tokio = { workspace = true, features = ["macros", "full"] }
