[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
async-trait = { workspace = true }
rand.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["macros", "full"] }
